trying to make this a little more useable

--- a/Python/2D_Disk.ipynb
+++ b/Python/2D_Disk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "from mshr import *\n",
     "from dolfin import *\n",
     "from collections import Counter\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os"
    ]
   },
   {
@@ -25,37 +26,6 @@
    "metadata": {},
    "source": [
     "# Run Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Target mesh size:\n",
-    "target_a = 0.05"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "InputMesh, OutputMesh, interiorbonds,edgebonds,angletriples = MakeDolfinMesh()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bonds = interiorbonds+edgebonds"
    ]
   },
   {
@@ -94,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def MakeDolfinMesh():\n",
+    "def MakeDolfinMesh(a):\n",
     "    # make the mesh. Lets have a unit circle. It seems, from trial and error, that\n",
     "    # res = 1.5*Radius/mesh_size,\n",
     "    domain = Ellipse(Point(0, 0, 0),1.0,1.0, 40)\n",
-    "    mesh = generate_mesh(domain, 1.5/target_a)\n",
+    "    mesh = generate_mesh(domain, 1.5/a)\n",
     "    mesh.init()\n",
     "    \n",
     "    # need to add a 3rd dimension 0 coordinate here\n",
@@ -208,47 +178,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What are the continuum parameters we want?"
+    "User settings: What are the continuum parameters we want? where shall we store the run data?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Target mesh size:\n",
+    "target_a = 0.05\n",
     "# continuum bending modulus:\n",
     "kc=1\n",
     "# continuum shear modulus:\n",
-    "mu=1"
+    "mu=1\n",
+    "# root folder for data\n",
+    "DataFolder='/home/jackbinysh/Code/ActiveElastocapillarity/Data/'\n",
+    "# Folder for the run data\n",
+    "RunFolder=\"Test/\"\n",
+    "# Name of the run\n",
+    "RunName=\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully created the directory /home/jackbinysh/Code/ActiveElastocapillarity/Data/Test/ \n"
+     ]
+    }
+   ],
+   "source": [
+    "path = DataFolder+RunFolder\n",
+    "try:\n",
+    "    os.mkdir(path)\n",
+    "except OSError:\n",
+    "    print (\"Creation of the directory %s failed\" % path)\n",
+    "else:\n",
+    "    print (\"Successfully created the directory %s \" % path)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In 2D, we know that the elastic modulii are proportional to the microscopic spring constant. We also know that the continuum and microscopic modulii are related by a lattice space: $\\mu = O(1) k$, $k_c = k_d a$"
+    "Make the mesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kd=kc/target_a\n",
-    "k = mu"
+    "InputMesh, OutputMesh, interiorbonds,edgebonds,angletriples = MakeDolfinMesh(target_a)bb\n",
+    "InputMesh.write(DataFolder+RunFolder+RunName+\"InputMesh.vtk\")\n",
+    "#InputMesh, OutputMesh, interiorbonds,edgebonds,angletriples = MakePygMesh()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "InputMesh, OutputMesh, interiorbonds,edgebonds,angletriples = MakeDolfinMesh()\n",
-    "#InputMesh, OutputMesh, interiorbonds,edgebonds,angletriples = MakePygMesh()\n",
-    "RunString=\"Dolfin\""
+    " ## HOOMD stuff"
    ]
   },
   {
@@ -336,7 +334,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Right, lets define the bond type and parameters for each bond"
+    "Right, lets define the bond type and parameters for each bond. In 2D, we know that the elastic modulii are proportional to the microscopic spring constant. We also know that the continuum and microscopic momdulii are related by a lattice space: $\\mu = O(1) k$, $k_c = k_d a$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kd=kc/target_a\n",
+    "k = mu"
    ]
   },
   {
