getting things ready for the cluste

--- a/Python/EnergyMinimization/EnergyMinimizationScript.ipynb
+++ b/Python/EnergyMinimization/EnergyMinimizationScript.ipynb
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,209 @@
       "         Function evaluations: 275\n",
       "         Gradient evaluations: 1\n",
       "Total Area:3.13\n",
-      "Current g01.1\n"
+      "Current g01.1\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 8.775879\n",
+      "         Iterations: 47\n",
+      "         Function evaluations: 27237\n",
+      "         Gradient evaluations: 99\n",
+      "Total Area:3.13\n",
+      "Current g01.2\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 8.906190\n",
+      "         Iterations: 51\n",
+      "         Function evaluations: 28060\n",
+      "         Gradient evaluations: 102\n",
+      "Total Area:3.13\n",
+      "Current g01.3\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 9.060107\n",
+      "         Iterations: 53\n",
+      "         Function evaluations: 32185\n",
+      "         Gradient evaluations: 117\n",
+      "Total Area:3.13\n",
+      "Current g01.4\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 9.239584\n",
+      "         Iterations: 51\n",
+      "         Function evaluations: 32183\n",
+      "         Gradient evaluations: 117\n",
+      "Total Area:3.13\n",
+      "Current g01.5\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 9.446573\n",
+      "         Iterations: 56\n",
+      "         Function evaluations: 32461\n",
+      "         Gradient evaluations: 118\n",
+      "Total Area:3.13\n",
+      "Current g01.6\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 9.683018\n",
+      "         Iterations: 55\n",
+      "         Function evaluations: 27786\n",
+      "         Gradient evaluations: 101\n",
+      "Total Area:3.14\n",
+      "Current g01.7\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 9.950862\n",
+      "         Iterations: 60\n",
+      "         Function evaluations: 34386\n",
+      "         Gradient evaluations: 125\n",
+      "Total Area:3.14\n",
+      "Current g01.8\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 10.252039\n",
+      "         Iterations: 59\n",
+      "         Function evaluations: 28061\n",
+      "         Gradient evaluations: 102\n",
+      "Total Area:3.14\n",
+      "Current g01.9\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 10.588476\n",
+      "         Iterations: 69\n",
+      "         Function evaluations: 41811\n",
+      "         Gradient evaluations: 152\n",
+      "Total Area:3.14\n",
+      "Current g02.0\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 10.962095\n",
+      "         Iterations: 69\n",
+      "         Function evaluations: 38787\n",
+      "         Gradient evaluations: 141\n",
+      "Total Area:3.15\n",
+      "Current g02.1\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 11.374807\n",
+      "         Iterations: 83\n",
+      "         Function evaluations: 35475\n",
+      "         Gradient evaluations: 129\n",
+      "Total Area:3.15\n",
+      "Current g02.2\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 11.828515\n",
+      "         Iterations: 72\n",
+      "         Function evaluations: 33011\n",
+      "         Gradient evaluations: 120\n",
+      "Total Area:3.15\n",
+      "Current g02.3\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 12.325114\n",
+      "         Iterations: 80\n",
+      "         Function evaluations: 38512\n",
+      "         Gradient evaluations: 140\n",
+      "Total Area:3.16\n",
+      "Current g02.4\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 12.866485\n",
+      "         Iterations: 79\n",
+      "         Function evaluations: 39336\n",
+      "         Gradient evaluations: 143\n",
+      "Total Area:3.16\n",
+      "Current g02.5\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 13.454499\n",
+      "         Iterations: 84\n",
+      "         Function evaluations: 37135\n",
+      "         Gradient evaluations: 135\n",
+      "Total Area:3.17\n",
+      "Current g02.6\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 14.091017\n",
+      "         Iterations: 83\n",
+      "         Function evaluations: 35487\n",
+      "         Gradient evaluations: 129\n",
+      "Total Area:3.17\n",
+      "Current g02.7\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 14.777883\n",
+      "         Iterations: 83\n",
+      "         Function evaluations: 36311\n",
+      "         Gradient evaluations: 132\n",
+      "Total Area:3.18\n",
+      "Current g02.8\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 15.516929\n",
+      "         Iterations: 84\n",
+      "         Function evaluations: 36311\n",
+      "         Gradient evaluations: 132\n",
+      "Total Area:3.18\n",
+      "Current g02.9\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 16.309973\n",
+      "         Iterations: 84\n",
+      "         Function evaluations: 35211\n",
+      "         Gradient evaluations: 128\n",
+      "Total Area:3.19\n",
+      "Current g03.0\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 17.158816\n",
+      "         Iterations: 86\n",
+      "         Function evaluations: 32450\n",
+      "         Gradient evaluations: 118\n",
+      "Total Area:3.19\n",
+      "Current g03.1\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 18.065243\n",
+      "         Iterations: 90\n",
+      "         Function evaluations: 40985\n",
+      "         Gradient evaluations: 149\n",
+      "Total Area:3.20\n",
+      "Current g03.2\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 19.031024\n",
+      "         Iterations: 92\n",
+      "         Function evaluations: 41261\n",
+      "         Gradient evaluations: 150\n",
+      "Total Area:3.21\n",
+      "Current g03.3\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 20.057907\n",
+      "         Iterations: 89\n",
+      "         Function evaluations: 37136\n",
+      "         Gradient evaluations: 135\n",
+      "Total Area:3.22\n",
+      "Current g03.4\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 21.147625\n",
+      "         Iterations: 92\n",
+      "         Function evaluations: 44287\n",
+      "         Gradient evaluations: 161\n",
+      "Total Area:3.22\n",
+      "Current g03.5\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 22.301888\n",
+      "         Iterations: 96\n",
+      "         Function evaluations: 40987\n",
+      "         Gradient evaluations: 149\n",
+      "Total Area:3.23\n",
+      "Current g03.6\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 23.522365\n",
+      "         Iterations: 105\n",
+      "         Function evaluations: 45387\n",
+      "         Gradient evaluations: 165\n",
+      "Total Area:3.24\n",
+      "Current g03.7\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 24.770013\n",
+      "         Iterations: 94\n",
+      "         Function evaluations: 48962\n",
+      "         Gradient evaluations: 178\n",
+      "Total Area:3.22\n",
+      "Current g03.8\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 25.821310\n",
+      "         Iterations: 136\n",
+      "         Function evaluations: 70965\n",
+      "         Gradient evaluations: 258\n",
+      "Total Area:3.20\n",
+      "Current g03.9\n",
+      "Warning: Desired error not necessarily achieved due to precision loss.\n",
+      "         Current function value: 26.866582\n",
+      "         Iterations: 173\n",
+      "         Function evaluations: 76462\n",
+      "         Gradient evaluations: 278\n",
+      "Total Area:3.19\n"
      ]
     }
    ],
