updating the cluster script too

--- a/Python/EnergyMinimization/EnergyMinimizationScript3D.ipynb
+++ b/Python/EnergyMinimization/EnergyMinimizationScript3D.ipynb
@@ -1770,7 +1770,43 @@
       "4.2224729959099975e-05\n",
       "iteration:76.0\n",
       "0.001834771187673965\n",
-      "3.982792137060766e-05\n"
+      "3.982792137060766e-05\n",
+      "iteration:77.0\n",
+      "0.0018347510877325356\n",
+      "3.97477351305684e-05\n",
+      "iteration:78.0\n",
+      "0.0018345119322136663\n",
+      "3.8799853889179036e-05\n",
+      "iteration:79.0\n",
+      "0.0018346305146083423\n",
+      "3.9268419645192054e-05\n",
+      "iteration:80.0\n",
+      "0.0018349017041159796\n",
+      "4.0350566427974476e-05\n",
+      "iteration:81.0\n",
+      "0.0018346390968390176\n",
+      "3.930244055511047e-05\n",
+      "iteration:82.0\n",
+      "0.0018346379371448009\n",
+      "3.9297842538411936e-05\n",
+      "iteration:83.0\n",
+      "0.001834671169514188\n",
+      "3.9429710571630613e-05\n",
+      "iteration:84.0\n",
+      "0.0018346625377727171\n",
+      "3.939543806958042e-05\n",
+      "iteration:85.0\n",
+      "0.001835092001127926\n",
+      "4.111870408166864e-05\n",
+      "iteration:86.0\n",
+      "0.001835131605023816\n",
+      "4.127947648814219e-05\n",
+      "iteration:87.0\n",
+      "0.0018348865171258283\n",
+      "4.028957591010986e-05\n",
+      "iteration:88.0\n",
+      "0.0018349411400611362\n",
+      "4.0509155465952294e-05\n"
      ]
     }
    ],
